--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "A minimal Electron application",
   "main": "main.js",
   "scripts": {
-    "start": "cross-env NODE_ENV=dev electron ."
+    "start": "cross-env NODE_ENV=dev electron .",
+    "sass": "node-sass -w sass/ -o ./"
   },
   "repository": "https://github.com/binaryfunt/electron-seamless-titlebar-tutorial",
   "author": "binaryfunt",
