--- a/package.json
+++ b/package.json
@@ -1,17 +1,19 @@
 {
-  "name": "electron-seamless-titlebar-tutorial",
+  "name": "custom-electron-titlebar",
   "version": "1.0.0",
-  "description": "A minimal Electron application",
+  "description": "Custom electron titlebar",
   "main": "main.js",
   "scripts": {
     "start": "cross-env NODE_ENV=dev electron .",
     "sass": "node-sass -w sass/ -o ./"
   },
-  "repository": "https://github.com/binaryfunt/electron-seamless-titlebar-tutorial",
-  "author": "binaryfunt",
+  "author": "jjkim",
   "license": "MIT",
   "devDependencies": {
     "cross-env": "^7.0.2",
     "electron": "^8.2.1"
+  },
+  "dependencies": {
+    "electron-settings": "^4.0.2"
   }
 }
