--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "electron": "^8.2.1"
   },
   "dependencies": {
-    "electron-settings": "^4.0.2"
+    "electron-settings": "^4.0.2",
+    "notistack": "^0.9.17"
   }
 }
