--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "main.js",
   "scripts": {
     "start": "cross-env NODE_ENV=dev electron .",
+    "bs": "cross-env NODE_ENV=dev electron ./electron-bs.html",
     "sass": "node-sass -w sass/ -o ./"
   },
   "author": "jjkim",
