--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -4,5 +4,9 @@
   "liveServer.settings.CustomBrowser": "chrome",
   "liveServer.settings.AdvanceCustomBrowserCmdLine": "chrome --incognito --remote-debugging-port=9222",
   "liveServer.settings.NoBrowser": false,
-  "liveServer.settings.ignoreFiles": [".vscode/**", "**/*.scss", "**/*.sass", "temp/*.*"]
+  "liveServer.settings.ignoreFiles": [".vscode/**", "**/*.scss", "**/*.sass", "temp/*.*"],
+
+  "files.watcherExclude": {
+    "**/build/win-unpacked/**": true
+  }
 }
