--- a/package.json
+++ b/package.json
@@ -6,13 +6,15 @@
   "scripts": {
     "start": "cross-env NODE_ENV=dev electron .",
     "bs": "cross-env NODE_ENV=dev electron ./electron-bs.html",
-    "sass": "node-sass -w sass/ -o ./"
+    "sass": "node-sass -w sass/ -o ./",
+    "build": "electron-builder build"
   },
   "author": "jjkim",
   "license": "MIT",
   "devDependencies": {
     "cross-env": "^7.0.2",
-    "electron": "^8.2.1"
+    "electron": "^8.2.1",
+    "electron-builder": "^19.53.4"
   },
   "dependencies": {
     "electron-settings": "^4.0.2",
